# Space-Invaders

./: .gitignore  Bullet.cpp  Bullet.h  CMakeLists.txt  Direction.h  Enemy_big_slow.cpp  Enemy_small_fast.cpp  Game_actor.cpp  Game_actor.h  Player.cpp  Player.h  Shield.cpp  Shield.h  main.cpp
